@@ -1,5 +1,13 @@
 2016-11-11 Even Rouault <even.rouault at spatialys.com>
 
+	* libtiff/tif_dirread.c: in TIFFFetchNormalTag(), make sure that
+	values of tags with TIFF_SETGET_C16_ASCII / TIFF_SETGET_C32_ASCII
+	access are null terminated, to avoid potential read outside buffer
+	in _TIFFPrintField().
+	Fixes http://bugzilla.maptools.org/show_bug.cgi?id=2590
+
+2016-11-11 Even Rouault <even.rouault at spatialys.com>
+
 	* libtiff/tif_dirread.c: reject images with OJPEG compression that
 	have no TileOffsets/StripOffsets tag, when OJPEG compression is
 	disabled. Prevent null pointer dereference in TIFFReadRawStrip1()
